# KITTI_lidar_semantic_segmentation

./: .gitattributes  .gitmodules  Dockerfile  README.md  ros.key
catkin_ws/src/cartographer_kitti/: CMakeLists.txt  package.xml
catkin_ws/src/cartographer_kitti/configuration_files/: kitti.lua
catkin_ws/src/cartographer_kitti/launch/: kitti_offline_loc.launch
deeplab_v3_checkpoint/: .gitattributes  model.ckpt-90000.data-00000-of-00002  model.ckpt-90000.data-00001-of-00002  model.ckpt-90000.index
kitti2bag/: setup.py
kitti2bag/kitti2bag/: kitti2bag.py
kitti_lidar_semantics/: autolabeling_on_cartographer.py  run_autolabeling_on_kitti.py  setup.py  shared_snippets.py
kitti_lidar_semantics/data/: hdl64_calib_corrections.xml
kitti_lidar_semantics/kitti_lidar_semantics/: ego_motion_correction_and_interpolation.py  run_on_kitti.py  utils.py
kitti_lidar_semantics/kitti_lidar_semantics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kitti_lidar_semantics/script/: run_cartographer_on_sequence.sh
read_transform/: setup.py
read_transform/read_transform/: read_transform_from_rosbag.py
script/: build_kitti_cartographer.sh  create_output_folder.sh  process_kitti.sh  run_cartographer_on_sequence.sh  test.sh
